<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/team_image"
        android:layout_width="match_parent"
        android:layout_height="187dp"
        android:scaleType="fitXY"
        android:src="@drawable/leaf"
        app:layout_constraintBottom_toTopOf="@id/linear_layout"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/team_image"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/student_image"
            android:layout_width="64dp"
            android:layout_height="40dp"
            android:paddingRight="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/smiley" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_name"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/team_name" />

        </LinearLayout>

    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/todo_assessments"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        android:id="@+id/todo_view"
        android:padding="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/completed_assessments"
        app:layout_constraintTop_toBottomOf="@+id/todo_view"
        android:id="@+id/completed_view"
        android:padding="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/team_leaderboard"
        app:layout_constraintTop_toBottomOf="@+id/completed_view"
        android:id="@+id/leaderboard_view"
        android:padding="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Team Feedback"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_view"
        android:id="@+id/feedback_view"
        android:padding="16dp"
        />

</android.support.constraint.ConstraintLayout>